# wicked-tabby

./: .env  .gitignore  Cargo.toml  docker-compose.yml  readme.md  sqlx-data.json  swag.rs  tk.sqlite
migrations/: 1_init.sql  20230514012616_init.sql
src/: base81.rs  database.rs  db.rs  domain.rs  errors.rs  files.rs  lib.rs  main.rs  server.rs  snowflakes.rs
src/web/: error.html  index-backup.css  index.css  index.html  index.js  redirect.html
